# bn-structure-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
bnsl_algorithms/: approximation_algorithm.py
child/: child_100.jaa  child_1000.jaa  child_100000.jaa
experiments/: experiments.py
experiments/configs/: approx.yaml  approx_large.yaml  approx_medium.yaml  approx_small.yaml  dp.yaml  example_config.yaml  partial_order_approach.yaml  test.yaml
experiments/notebooks/: example_notebook.ipynb  results.ipynb  results_large.ipynb  results_medium_large.ipynb  results_small.ipynb
insurance/: insurance_100.jaa  insurance_1000.jaa  insurance_10000.jaa
local_scores/: README.md
local_scores/large/: alarm_10000.jaa  hailfinder_100.jaa  hailfinder_1000.jaa  hailfinder_10000.jaa
local_scores/medium/: Mildew_100.jaa  Mildew_1000.jaa  Mildew_10000.jaa  alarm_100.jaa  alarm_1000.jaa  child_10000.jaa
results/medium/: Water_k_4_l_2_100_seed_42_results.json  Water_k_5_l_2_1000_seed_42_results.json  Water_k_5_l_2_100_seed_42_results.json  Water_k_5_l_2_100_seed_43_results.json  Water_k_5_l_2_100_seed_44_results.json  Water_k_6_l_3_1000_seed_42_results.json  Water_k_6_l_3_100_seed_42_results.json  Water_k_6_l_3_100_seed_43_results.json  Water_k_6_l_3_100_seed_44_results.json  Water_k_7_l_4_1000_seed_42_results.json  Water_k_7_l_4_100_seed_42_results.json  Water_k_7_l_4_100_seed_43_results.json  Water_k_7_l_4_100_seed_44_results.json  Water_k_8_l_5_100_seed_42_results.json  (+29 more)
scripts/: sample_data.py  write_local_scores.py
water/: Water_100.jaa  Water_1000.jaa  Water_10000.jaa
(+24 files in other folders)
