[project]
name = "bn-structure-learning"
version = "0.1.0"
description = "Repository for bayesian network structure learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bnlearn>=0.10.2",
    "dowhy>=0.14",
    "graphviz>=0.21",
    "gurobipy==11.0.3",
    "ipykernel>=7.1.0",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pgmpy>=1.0.0",
    "pygobnilp>=1.0",
    "pygraphviz>=1.14",
    "pyparsing>=3.2.5",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bnsl = "bnsl.cli.main:main"
